# 3DTG

./: .gitignore  .gitmodules  CHAGELOG.md  CMakeLists.txt  Makefile  README.md  depsMacOS.sh  depsUnix.sh  depsWin.bat  docs.md  mingw.bat
3dtile-viewer/: README.md  main.js  menu-functions.js  menu.js  package.json  preload.js  server.js
3dtile-viewer/web-page/: CesiumMeasurementPlugin.js  app.js  index.html  renderer.js  style.css
cli/: Makefile  README.md  mingw.bat
cli/src/: main.cpp  utils.cpp  utils.h
construkted-tiler/: construktedTiler.js  findChildren.js  package.json  util.js
construkted-tiler/lib/: readGlbWriteB3dm.js
construkted-tiler/test/: test.html
examples/: ParallelCompute.cpp
gridsplit/: gridsplit.c  gridsplit.h  misc.c  objlib.h
houdini/: _run_lod_tool_v1.0.py  construkted_tex_baker_v100.hda  lod_processor_v2.2.py
include/GLTF/: GLTFTechnique.h
include/cxxopts/: cxxopts.hpp
include/json/: json.hpp
legacy/decimate/: Makefile  decimate.c  decimate.h
legacy/gridsplit/: Makefile  gridsplit.c  gridsplit.h  misc.c
legacy/meshlab/: clean.mlx  decimate.mlx  flatten.mlx
legacy/oversight/: objlib.c  oversight.c  oversight.h
legacy/retexture/: Makefile  bitmaplib.c
legacy/split/: Makefile  split.c  split.c_1.02
oversight/: Makefile  oversight.c
retexture/: Makefile  bitmaplib.h  misc.c  retexture.c  retexture.h
split/: split.c  split.h  split.h_1.02
src/: App.cpp  App.h  Options.h  main.cpp  main_backup  types.h  utils.cpp  utils.h
src/exporters/: B3DMExporter.cpp  B3DMExporter.h  Exporter.cpp  Exporter.h  ObjExporter.h  (+3 more)
(+65 files in other folders)
